# gpu-algorithms-labs

./: .agignore  .clang-format  .editorconfig  .gitignore  .travis.yml  LICENSE.TXT  README.md
dockerfiles/: Dockerfile.amd64  Dockerfile.amd64_cuda100  Dockerfile.ppc64le  Dockerfile.ppc64le_cuda100  Makefile
labs/basic_conv/: CMakeLists.txt  README.md  main.cu  rai_build.yml  shape.hpp
labs/bfs/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  bfs  cmake_install.cmake  compile_commands.json  eval.cu  helper.hpp  rai_build.yml  template.cu  template.hu
labs/binning/: CMakeLists.txt  README.md  helper.hpp  main.cu  rai_build.yml
labs/device_query/: CMakeLists.txt  main.cu  rai_build.yml
labs/gather/: CMakeLists.txt  README.md  helper.hpp  main.cu  rai_build.yml
labs/parallel_merge/: CMakeLists.txt  README.md  eval.cu  helper.hpp  rai_build.yml  template.cu  template.hu
labs/scatter/: CMakeLists.txt  README.md  main.cu  rai_build.yml
labs/sgemm-regtiled-coarsened/: CMakeLists.txt  README.md  eval.cu  helper.hpp  rai_build.yml  template.cu  template.hu
labs/spmv/: Makefile  README.md  generator.c  questions.json  rai_build.yml  run.sh  spmv  template.cu
labs/spmv/data/0/: data.raw  row.raw
labs/spmv/data/1/: col.raw  output.raw
labs/spmv/data/2/: col.raw  vec.raw
labs/spmv/data/3/: data.raw  row.raw  vec.raw
labs/spmv/data/4/: data.raw  row.raw
labs/spmv/data/5/: output.raw
labs/spmv/data/6/: col.raw  data.raw  output.raw  row.raw  vec.raw
labs/spmv/data/7/: col.raw  data.raw  output.raw  vec.raw
labs/spmv/data/8/: data.raw  vec.raw
labs/spmv/data/9/: col.raw  data.raw  output.raw  row.raw  vec.raw
labs/spmv_simple/: Makefile  README.md  config.json  rai_build.yml  run.sh  solution.cu  spmv  template.cu
labs/spmv_simple/data/0/: col.raw  output.raw  vec.raw
labs/spmv_simple/data/1/: data.raw  row.raw  vec.raw
labs/spmv_simple/data/2/: data.raw  output.raw  row.raw
labs/spmv_simple/data/3/: col.raw  output.raw
labs/spmv_simple/data/4/: col.raw  output.raw  vec.raw
labs/spmv_simple/data/5/: col.raw  data.raw  row.raw  vec.raw
labs/spmv_simple/data/7/: row.raw
labs/spmv_simple/data/8/: col.raw  output.raw  row.raw
labs/stencil/: CMakeLists.txt  README.md  helper.hpp  rai_build.yml  template.cu
labs/tiled_conv/: CMakeLists.txt  README.md  helper.hpp  main.cu  rai_build.yml  range.hpp  shape.hpp
labs/triangle_counting/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  eval.cu  helper.hpp  rai_build.yml  template.cu  template.hu
labs/triangle_counting/cmake/Hunter/: config.cmake
labs/triangle_counting/dynamic_parallel_enabled/: CMakeLists.txt  rai_build.yml
